syntax = "proto3";

package voltex;

service TraceReader {
  rpc GetChannels (ChannelRequest) returns (ChannelResponse);
  rpc Read(ReadRequest) returns (stream Frame);

  // Load a waveform file and return its structured data
  rpc LoadWaveformFile(LoadWaveformFileRequest) returns (LoadWaveformFileResponse);
}

// Request to load a waveform file from disk
message LoadWaveformFileRequest {
  string path = 1;
}

message LoadWaveformFileResponse {
  repeated WaveformChannel channels = 1;
  string error = 2;
}

// Structured waveform channel data
message WaveformChannel {
  string name = 1;
  repeated WaveformPoint data = 2;
}

message WaveformPoint {
  double t = 1;
  double v = 2;
}

message ChannelRequest {
  string path = 1;
}

message ChannelResponse {
  repeated ChannelGroup channel_groups = 1;
}

message ChannelGroup {
  repeated Channel channels = 1;
}

message Channel {
  string name = 1;
}

message ReadRequest {
}

message Frame {
  int32 id = 1;
  bytes data = 2;
}
